--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,13 @@
+$primary-color: rgb(44, 44, 44);
+$primary800:rgb(42, 41, 41);
+$primary500:rgb(184, 184, 184);
 *{
   margin:0;
   padding:0;
   box-sizing: border-box;
 }
-body{
-  // overflow-x: hidden;
-}
-.main{
-  margin:1rem;
-  width:100%;
+.container{
+  width:100vw;
 }
 .card-container{
   padding:1rem;
@@ -18,4 +17,185 @@ body{
   grid-template-columns: repeat(auto-fit,minmax(25rem,1fr));
   gap:1rem;
   overflow-wrap:anywhere;
+}
+.card{
+  height:max-height;
+  width:25rem;
+  background:rgb(68, 67, 65);
+  margin:1rem;
+  padding:0.5rem;
+}
+.top-bar{
+  width:100%;
+  // background:$primary-color;
+  height:5.5rem;
+  padding:1rem;
+  padding-top:1.5rem;
+  display:grid;
+  grid-template-columns: 0.5fr 1fr;
+  place-items: center;
+}
+.top-bar{
+  div{
+    line-height: 1.4rem;
+  }
+  h3,h4{
+    font-weight: 700;
+    font-size: 1.2rem;
+  }
+  h3{
+    font-size: 1.8rem;
+  }
+  h4{
+    color:rgb(168, 168, 168);
+  }
+  
+}
+.search{
+  background:$primary800;
+  border-radius: 2rem;
+  width:clamp(7rem,80%,30rem);
+  display:grid;
+  grid-template-columns: 1fr auto;
+  place-items: center;
+  overflow: hidden;
+  height:3rem;
+}
+.search{
+  input{
+    width:100%;
+    height:100%;
+    border:none;
+    outline:none;
+    padding:1rem;
+    background-color: $primary800;
+    font-size: 0.9rem;
+  }
+  i{
+    cursor: pointer;
+    margin-right:1.5rem;
+    color:rgb(139, 138, 138);
+  }
+  i:hover{
+    scale:1.1;
+  }
+  i:active{
+    scale:0.9;
+  }
+}
+.main{
+  height:25rem;
+  width:100%;
+  background:$primary-color;
+  padding:1rem;
+  border-radius: 1rem;
+  display:grid;
+  grid-template-columns: 0.5fr 1fr;
+  gap:1rem;
+  max-width: 80rem;
+  margin:auto;
+}
+.main{
+  .main-tmp{
+    margin:auto;
+    width:100%;
+    min-width:12rem;
+    height:10rem;
+    background:rgb(54, 54, 56);
+    padding:1rem;
+    border-radius: 1rem;
+    position:relative;
+    overflow: hidden;
+  }
+  .weather-icon{
+    position:absolute;
+    top:1rem;
+    right:1rem;
+    font-size: 3rem;
+    color:lightblue;
+  }
+}
+.space-1{
+  display: inline-block;
+  width:1rem;
+  height:1rem;
+  background-color: transparent;
+}
+.clr-suddle{
+  color:$primary500;
+  text-transform: capitalize;
+}
+.main-stats{
+  display:grid;
+  grid-template-columns: repeat(auto-fit,minmax(6rem,25%));
+  gap:3%;
+  place-items: center;
+}
+.heighlight{
+  font-size: 1.05rem;
+  font-weight: 500;
+  padding-left:0.5rem;
+}
+.main-stats{
+  section{
+    width:85%
+  }
+  section  p:nth-child(2){
+    color:$primary500;
+    text-align: start;
+    font-size: 0.9rem;
+  }
+}
+.slide{
+  grid-column: 1 / 3;
+  background:transparent;
+  height:10rem;
+  overflow: hidden;
+  position: relative;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+.slide-frame{
+  width:max-content;
+  min-width: 100%;
+  height:100%;
+  display:grid;
+  grid-template-columns: repeat(8,6rem);
+  grid-template-rows: 1fr;
+  gap:1rem;
+}
+.hour-card{
+  padding:0.5rem;
+  width:100%;
+  height: 100%;
+  background-color: rgb(34, 34, 35);
+  color:rgb(255, 255, 255);
+  border-radius: 1rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  place-items: center;
+  li{
+    list-style: none;
+  }
+}
+.gray{
+  color:$primary500
+}
+.time{
+  font-size: 0.9rem;
+}
+.week-forcast-container{
+  height:35rem;
+  min-height: max-content;
+  width:100%;
+  // background:rgb(66, 64, 64);
+  border:1px solid white;
+  padding:1rem;
+  border-radius: 1rem;
+  display:grid;
+  grid-template-columns: 0.5fr 1fr;
+  gap:1rem;
+  max-width: 80rem;
+  margin:auto;
+  margin-top:3rem;
 }
