--- a/src/App.scss
+++ b/src/App.scss
@@ -167,7 +167,7 @@ $primary500:rgb(184, 184, 184);
   margin-top:2rem;
   grid-column: 1 / 3;
   background:transparent;
-  height:10rem;
+  height:9rem;
   overflow: hidden;
   position: relative;
   overflow-x: auto;
@@ -316,4 +316,29 @@ $primary500:rgb(184, 184, 184);
   height:2rem;
   padding-left:2rem;
   border-bottom:1px solid rgb(63, 63, 63);
+}
+
+@media (max-width:600px) {
+  .main{
+    display: block;
+    height:max-content;
+    .main-stats{
+      margin-top:1.4rem;
+      gap:1rem;
+      section p {
+        font-size: 0.9rem ;
+      }
+    }
+    .float{
+      top:20rem;
+    }
+    .slide{
+      margin-top:4rem;
+      font-size: 0.9rem;
+      height:8rem;
+    }
+  }
+  .z-5{
+    font-size: 0.73rem;
+  }
 }
